Add Groq SDK integration and update chat endpoint implementation

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "groq": "^3.78.1",
     "groq-sdk": "^0.15.0"
   }
 }
