--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-GROQ_API_KEY=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
+GROQ_API_KEY=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   #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
 PORT=3000
